# hosts-rs

./: .gitignore  Cargo.toml  README.md
github-hosts/: Cargo.toml  README.md  build.rs
github-hosts/resources/: manifest.xml
github-hosts/src/: main.rs  req.rs
resolve-github/: .gitignore  Cargo.toml  README.md
resolve-github/src/: main.rs
resolve-github/src/dns/: mod.rs  res.rs  resolve.rs
src/: file.rs  lib.rs  main.rs  parse.rs  req.rs
